--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.1.1",
     "date-fns": "^2.25.0",
     "mongoose": "^6.0.13",
-    "next": "12.0.4",
+    "next": ">=12.0.5",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
