--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@mui/material": "^5.1.1",
     "date-fns": "^2.25.0",
     "mongoose": "^6.0.13",
-    "next": ">=12.0.5",
+    "next": "^12.0.8",
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
@@ -29,6 +29,6 @@
   },
   "devDependencies": {
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "^0.2.4"
   }
 }
