--- a/daily-checker/package.json
+++ b/daily-checker/package.json
@@ -12,13 +12,15 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
+    "bull": "^4.8.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.26.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "mongoose": "^6.0.13",
     "node-cron": "^3.0.0",
     "nodemailer": "^6.7.2",
-    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemailer-express-handlebars": "^5.0.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
